# tcp-ai-client

./: .gitignore  .gitmodules  README.md
extract_text_from_pdf_test/repository/: extract_text_from_pdf_repository.py  extract_text_from_pdf_repository_impl.py
extract_text_from_pdf_test/service/: extract_text_from_pdf_service.py  extract_text_from_pdf_service_impl.py
first_user_defined_function_domain/repository/: fudf_repository.py  fudf_repository_impl.py
first_user_defined_function_domain/service/: fudf_service.py  fudf_service_impl.py
llama_test/controller/: llama_test_controller.py
llama_test/repository/: llama_test_repository.py  llama_test_repository_impl.py
llama_test/service/: llama_test_service.py  llama_test_service_impl.py
llama_three_test/repository/: llama_three_repository.py  llama_three_repository_impl.py
llama_three_test/service/: llama_three_service.py  llama_three_service_impl.py
openai_api/repository/: openai_api_repository.py  openai_api_repository_impl.py
openai_api/service/: open_ai_service.py  open_ai_service_impl.py
openai_api_test/repository/: openai_api_test_repository_impl.py
openai_api_test/service/: openai_api_test_service_impl.py
preprocessing/repository/: preprocessing_repository.py  preprocessing_repository_impl.py
project_starter/: starter.py
task_executor/: .gitignore  Cargo.toml  build.rs
task_executor/src/: main.rs
user_defined_protocol/: protocol.py  register.py
user_defined_queue/repository/: user_defined_queue_repository.py  user_defined_queue_repository_impl.py
vectorstore/faiss_index/: index.pkl  (+1 more)
(+15 files in other folders)
